fix file reading and file formatting